# icons

./: .directory  .gitignore  CMakeLists.txt  icons.kdev4
.kdev4/: icons.kdev4
candle-light/: CMakeLists.txt  index.theme
candle-light/actions/22/: .directory
candle-light/apps/16/: .directory
candle-light/apps/22/: .directory
candle-light/apps/32/: .directory
candle-light/categories/22/: .directory
candle-light/places/32/: .directory
